# near_recommender

./: .buildinfo  .gitignore  NEAR-Recommender.drawio  README.md  architecture.html  commands.html  data.html  genindex.html  index.html  introduction.html  models.html  overview.html  py-modindex.html  pyproject.toml  search.html  tox.ini
.doctrees/: architecture.doctree  commands.doctree  data.doctree  environment.pickle  introduction.doctree  overview.doctree
.doctrees/source/: near_recommender.src.data.queries.doctree  near_recommender.src.features.doctree
_sources/: data.rst.txt  models.rst.txt
_sources/source/: near_recommender.src.data.rst.txt
docs/: .buildinfo  architecture.html  commands.html  conf.py  data.html  genindex.html  index.html  index.rst  introduction.html  models.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  overview.doctree
docs/.doctrees/source/: near_recommender.doctree  near_recommender.src.data.doctree  near_recommender.src.doctree  near_recommender.src.models.doctree
docs/_sources/: architecture.rst.txt  data.rst.txt  index.rst.txt  introduction.rst.txt
docs/_sources/source/: near_recommender.rst.txt  near_recommender.src.data.queries.rst.txt  near_recommender.src.rst.txt
docs/doctrees/: data.doctree  environment.pickle  index.doctree  introduction.doctree  models.doctree  overview.doctree
docs/doctrees/source/: near_recommender.src.doctree
docs/source/: near_recommender.html  near_recommender.src.data.html  near_recommender.src.data.queries.html  near_recommender.src.features.html  near_recommender.src.html  near_recommender.src.models.html
near_recommender/: __init__.py  main.py
near_recommender/data/: get_dataframe.py
near_recommender/docs/: Makefile  NEAR-Recommender.drawio  algorithms.rst  architecture.rst  commands.rst  conf.py  data.rst  functions.rst  index.rst  introduction.rst  make.bat  overview.rst  recommender-logic.rst  run_routine.rst
near_recommender/docs/source/: near_recommender.src.features.rst  (+2 more)
near_recommender/features/: preprocessors.py  utils.py
near_recommender/models/: similar_posts.py  similar_tags.py
near_recommender/notebooks/: MLFlow Random Forest Active Users.py  Sample Notebook S3 writer for recommender.py  Silver_Near_Data_Profile_Tags_01.ipynb  Trending_ users.ipynb  Trending_users.ipynb  Trending_users_recommendations.ipynb  XGBoost Active Users.py
near_recommender/src/: main.py  process_recommendations.py  recommender.py
notebooks/: Silver_Near_Data_NLP_WordEmbeddings_05.ipynb
source/: near_recommender.html  near_recommender.src.data.html  near_recommender.src.data.queries.html  near_recommender.src.features.html  near_recommender.src.html  near_recommender.src.models.html
src/: main.py
src/data/: get_dataframe.py
src/features/: top_sentences.py  utils.py
src/models/: similar_posts.py  similar_tags.py
src/tests/: test_similar_sentences.py  test_similar_tags.py
(+33 files in other folders)
