[tool.poetry]
name = "near-recommender"
version = "0.1.0"
description = "Recommender System for the social platform based on the near protocol."
authors = ["scopalaffairs <ministry@scopal-affairs.com>"]
license = "GNUv3"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.28.1"
contractions = "^0.1.73"
sentence-transformers = "^2.2.2"
demoji = "^1.1.0"
pandas = "^2.0.0"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.3"
neovim = "^0.3.1"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
epdb = "^0.15.1"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
