[tool.poetry]
name = "near-recommender"
version = "0.1.0"
description = "Recommender System for the social platform based on the near protocol."
authors = ["scopalaffairs <ministry@scopal-affairs.com>"]
license = "GNUv3"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.28.1"
contractions = "^0.1.73"
sentence-transformers = "^2.2.2"
demoji = "^1.1.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
sphinx = "^6.1.3"
click = "^8.1.3"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.3"
neovim = "^0.3.1"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
epdb = "^0.15.1"
ipython = "^8.12.0"

[tool.poetry.scripts]
main = "near_recommender.src.main:main"
update_corpus = "near_recommender.src.models.similar_posts:update_model"
similar_posts = "near_recommender.src.models.similar_posts:get_similar_post_users"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
