[tool.poetry]
name = "near-recommender"
version = "0.1.0"
description = "Recommender System for the social platform based on the near protocol."
authors = [
"scopalaffairs <ministry@scopal-affairs.com>", 
"ARojo <rojoserrano@gmail.com>",
]
license = "GNUv3"

[tool.poetry.dependencies]
cdlib = "^0.2.6"
contractions = "^0.1.73"
demoji = "^1.1.0"
furo = "^2023.3.27"
mlflow = "^2.3.2"
networkx = "^3.1"
nltk = "^3.8.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
python = ">=3.9.5,<3.10"
scipy = "^1.10.1"
sentence-transformers = "^2.2.2"
sphinx = "<7.0"
torch = "^2.0.1"
transformers = "^4.29.1"
xgboost = "^1.7.5"
pyspark = "^3.4.0"

[tool.poetry.group.dev-dependencies.dependencies]
ipython = "^8.13.2"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
neovim = "^0.3.1"
epdb = "^0.15.1"

[tool.poetry.scripts]
main = "near_recommender.src.main:main"
update_corpus = "near_recommender.src.models.similar_posts:update_model"
similar_posts = "near_recommender.src.models.similar_posts:get_similar_post_users"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
